# Aecros

./: CMakeLists.txt  aecros  main.cpp  window.cpp  window.hpp
gtk_version/src/: app  window.cpp  window.h
media/: directories.txt
